# zig-evtx

./: .gitignore  .justfile  AGENTS.md  BUG_REPORT_POSITION_TRACKING.md  CLAUDE.md  EVTX_PARSER_DOCUMENTATION.md  EVTX_TEMPLATE_ANALYSIS.md  EVTX_XML_STRUCTURE.md  Makefile  README.md  TEMPLATE_PARSING_FIX.md  TEMPLATE_STRUCTURE_FINDINGS.md  TODO.md  Windows XML Event Log (EVTX).asciidoc  analyze_bytes.py  analyze_exact_structure.py  analyze_substitution_offset.py  build.zig  build.zig.zon  check_startofstream.py  check_token_flags.py  compare_first_record_xml.py  debug_binary_xml.py  debug_first_record.py  debug_namenode.py  debug_openstartlement_structure.py  debug_parseTemplate.zig  debug_position_tracking.zig  debug_record_structure.zig  debug_substitution_issue.py  debug_substitution_parsing.zig  debug_template.py  debug_template_550.py  debug_template_binary.py  debug_template_corruption.py  debug_template_format.py  debug_template_id_offset.zig  debug_template_processing.py  debug_template_rendering.py  debug_token_stream.py  (+28 more)
.cursor/rules/: evtx-binxml-ir.mdc  important.mdc  logger.mdc
evtxzig/: __init__.py
makefiles/: compare.mk  flamegraph.mk  lldb.mk  python.mk  zig.mk
scripts/: evtx_dump.py  py_demo_iter_jsonl.py  py_iter_from_bytes.py  py_iter_from_file.py  py_iter_from_io.py  record_diff.py
src/: alloc.zig  bench_utf_zbench.zig  binary_parser.zig  bxml_parser.zig  evtx.zig  evtx_pydust.zig  fuzz_evtx.zig  logger.zig  main.zig  nodes.zig  template_processor.zig  test_runner.zig  tests.zig  tokens.zig  variant_types.zig  views.zig
src/parser/: err.zig  (+8 more)
(+21 files in other folders)
