[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zig-evtx"
version = "0.1.0"
description = "Python bindings for the Zig EVTX parser"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "gpt5-codex", email = "devnull@example.com" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["evtxzig"]

[tool.setuptools.package-data]
evtxzig = ["*.so", "*.pyi"]

# Pydust configuration (used by Zig build to emit the Python extension module)
[tool.pydust]
zig_exe = "zig"

[[tool.pydust.ext_module]]
name = "evtxzig._lib"
root = "src/evtx_pydust.zig"
